--- a/assets/index.html
+++ b/assets/index.html
@@ -6,75 +6,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
-    <title>The bird encyclopedia</title>
+    <title>spz</title>
 </head>
 
 <body>
-<h1>The bird encyclopedia</h1>
 <!--
   This section of the document specifies the table that will
-  be used to display the list of birds and their description
+  be used to display the list of cars and their description
+
  -->
-<table>
-    <tr>
-        <th>Species</th>
-        <th>Description</th>
-    </tr>
-    <td>Pigeon</td>
-    <td>Common in cities</td>
-    </tr>
-</table>
-<br/>
+
 
 <!--
   This section contains the form, that will be used to hit the
-  `POST /bird` API that we will build in the next section
+  `POST /car` API that we will build in the next section
  -->
-<form action="/bird" method="post">
-    Species:
-    <input type="text" name="species">
+<form action="/car" method="post">
+    SPZ(must have 7 znaků):
+    <input type = "text" name="spz" oninput="this.value= this.value.toUpperCase()" pattern=".{7,7}">
+
     <br/> Description:
     <input type="text" name="description">
     <br/>
     <input type="submit" value="Submit">
 </form>
+<br/><br/>
+<table>
+    <tr>
+        <th>SPZ</th>
+        <th>Description</th>
+    </tr>
+</table>
 
 <!--
   Finally, the last section is the script that will
-  run on each page load to fetch the list of birds
+  run on each page load to fetch the list of cars
   and add them to our existing table
  -->
 <script>
-    birdTable = document.querySelector("table")
+    carTable = document.querySelector("table")
 
     /*
-    Use the browsers `fetch` API to make a GET call to /bird
-    We expect the response to be a JSON list of birds, of the
+    Use the browsers `fetch` API to make a GET call to /car
+    We expect the response to be a JSON list of cars, of the
     form :
     [
       {"species":"...","description":"..."},
       {"species":"...","description":"..."}
     ]
     */
-    fetch("/bird")
+    fetch("/car")
         .then(response => response.json())
-        .then(birdList => {
+        .then(carList => {
             //Once we fetch the list, we iterate over it
-            birdList.forEach(bird => {
+            carList.forEach(car => {
                 // Create the table row
                 row = document.createElement("tr")
 
                 // Create the table data elements for the species and description columns
-                species = document.createElement("td")
-                species.innerHTML = bird.species
+                SPZ = document.createElement("td")
+                SPZ.innerHTML = car.spz
                 description = document.createElement("td")
-                description.innerHTML = bird.description
+                description.innerHTML = car.description
 
                 // Add the data elements to the row
-                row.appendChild(species)
+                row.appendChild(SPZ)
                 row.appendChild(description)
                 // Finally, add the row element to the table itself
-                birdTable.appendChild(row)
+                carTable.appendChild(row)
             })
         })
 </script>
