--- a/assets/index.html
+++ b/assets/index.html
@@ -13,7 +13,7 @@
 <!--
   This section of the document specifies the table that will
   be used to display the list of cars and their description
-
+hovno
  -->
 
 
